crates/sysgen-macros/tests/cases/implements_invalid_attr.stderr
error: expected string literal
 --> tests/cases/implements_invalid_attr.rs:3:14
  |
3 | #[implements(42)]
  |              ^^
