crates/sysgen-macros/tests/cases/implements_invalid_attr.rs
use sysgen_macros::implements;

#[implements(42)]
pub fn not_valid() {}

fn main() {}
